[gd_scene load_steps=4 format=3 uid="uid://bfr6p2de5ji72"]

[ext_resource type="Script" path="res://Viewport Layout/ViewportParent.gd" id="1_23lwa"]
[ext_resource type="PackedScene" uid="uid://cclgcfc6tat0h" path="res://Viewport Layout/SceneTest.tscn" id="1_awmf1"]
[ext_resource type="Script" path="res://Viewport Layout/PixelArtViewport.gd" id="1_h23t3"]

[node name="Screen" type="ColorRect"]
custom_minimum_size = Vector2(640, 380)
offset_right = 640.0
offset_bottom = 380.0
color = Color(0, 0, 0, 0)
script = ExtResource("1_23lwa")
test = true

[node name="HiRes" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.003
offset_top = 1.0
offset_bottom = -0.140015
grow_horizontal = 2
grow_vertical = 2

[node name="PixelArt" type="SubViewportContainer" parent="."]
process_priority = 100
layout_mode = 1
anchors_preset = -1
anchor_left = -0.5
anchor_top = -0.5
anchor_right = -0.5
anchor_bottom = -0.5
offset_left = 320.0
offset_top = 190.0
offset_right = 1600.0
offset_bottom = 950.0
size_flags_horizontal = 0
size_flags_vertical = 0
stretch = true
script = ExtResource("1_h23t3")

[node name="PixelArtViewport" type="SubViewport" parent="PixelArt"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(1280, 760)
render_target_update_mode = 4

[node name="SceneTest" parent="PixelArt/PixelArtViewport" instance=ExtResource("1_awmf1")]

[node name="PixelFrame" type="Node2D" parent="PixelArt"]

[node name="PixelFrameOutline" type="ReferenceRect" parent="PixelArt/PixelFrame"]
offset_left = -8.0
offset_top = -8.0
offset_right = 1288.0
offset_bottom = 768.0
border_color = Color(0.848096, 0.717694, 1.54018e-06, 1)
border_width = 16.0

[node name="Frame" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 190.0
offset_right = 320.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 190)
theme_override_constants/margin_left = -8
theme_override_constants/margin_top = -8
theme_override_constants/margin_right = -8
theme_override_constants/margin_bottom = -8

[node name="FrameOutline" type="ReferenceRect" parent="Frame"]
layout_mode = 2
border_color = Color(0.950882, 0.000221979, 0.82057, 1)
border_width = 16.0

[node name="FeedGrabber" type="Camera2D" parent="."]
visible = false
position = Vector2(640, 380)
